samples/_failures_safe/1761539806_7886be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e301868.c: In function ‘main’:
./samples/SAFE/__tmp_0e301868.c:154:5: error: expected declaration or statement at end of input
  154 |     initialize_transition_table(&tt);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~
